--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="cep">CEP</label>
-                <input name="cep" id="cep" class="campo__escrita" required />
+                <input name="cep" onfocusout="PegaValor()" id="cep" class="campo__escrita" required />
             </div>
 
             <div class="formulario__campo">
